# SeqPro

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  enviroment.yml  meta.yaml  pixi.toml  pyproject.toml  requirements.txt  scratch_bench_rc.py  scratch_bench_to_padded.py  setup.py  strip_docstring_types.py  zensical.toml
.claude/skills/zensical/: SKILL.md
.claude/skills/zensical-setup/: .skillfish.json  SKILL.md
.github/workflows/: bench.yaml  bump.yaml  docs.yml  lint.yaml  merge.yaml  publish.yaml  release-pipeline.yaml  release.yaml  test.yaml
benches/: bench_tokenize_translate.py  kshuffle.rs
benchmarks/: bench_ragged_backends.py  bench_to_packed.py
crates/seqpro-core/: Cargo.toml
crates/seqpro-core/src/: lib.rs  ragged.rs
docs/: api.md  conf.py  index.md  installation.md  ragged.md  requirements.txt
docs/api/: alphabets.md  bed.md  gtf.md  index.md  ragged.md  types.md
docs/roadmap/: rust-ragged.md
docs/superpowers/plans/: 2026-05-04-ragged-record-array.md  2026-05-05-documentation-site.md  2026-05-05-narwhals-coord-schema.md  2026-05-05-ragged-zip-and-record-introspection.md  2026-05-20-kshuffle-optimization.md  2026-05-20-kshuffle-pooled-buffers-and-k2-fast-path.md  2026-05-20-kshuffle-wilson-single-pass.md  2026-05-20-release-pipeline.md  2026-05-28-translate-lut-validation.md  2026-05-31-flat-buffer-to-padded.md  2026-05-31-rag-to-packed.md  2026-06-05-translate-unknown-codon-policy.md  2026-06-12-tokenize-lut-codspeed.md  2026-06-18-rust-tokenize-translate.md  2026-06-19-rust-ragged-core.md  2026-06-20-rust-ragged-records.md  2026-06-20-rust-ragged-spec-c.md  2026-06-21-ragged-throughput-gate.md  2026-06-21-rust-ragged-consumer-audit.md  2026-06-23-ragged-subclass-getitem.md  2026-06-24-ragged-getitem-fastpaths.md  2026-06-25-ragged-string-hashing.md
docs/superpowers/specs/: 2026-05-04-ragged-record-array-design.md  2026-05-05-documentation-site-design.md  2026-05-05-narwhals-coord-schema-design.md  2026-05-05-ragged-zip-and-record-introspection-design.md  2026-05-20-kshuffle-optimization-design.md  2026-05-20-kshuffle-pooled-buffers-and-k2-fast-path-design.md  2026-05-20-kshuffle-wilson-single-pass-design.md  2026-05-20-release-pipeline-design.md  2026-05-28-translate-lut-and-validation-design.md  2026-05-31-flat-buffer-to-padded-design.md  2026-05-31-rag-to-packed-design.md  2026-06-05-translate-unknown-codon-policy-design.md  2026-06-12-tokenize-lut-codspeed-design.md  2026-06-18-rust-tokenize-translate-design.md  2026-06-19-rust-ragged-core-design.md  2026-06-20-rust-ragged-nested-design.md  2026-06-20-rust-ragged-records-design.md  2026-06-21-ragged-throughput-gate-design.md  2026-06-21-rust-ragged-audit-ledger.md  2026-06-21-rust-ragged-consumer-audit-design.md  2026-06-23-ragged-subclass-getitem-design.md  2026-06-24-ragged-getitem-fastpaths-design.md  2026-06-25-ragged-string-hashing-design.md
notebooks/: modifers.ipynb
notebooks/tests/: all_functionality.ipynb  core_functionality.ipynb  dna_alphabet.ipynb  issues.ipynb
python/seqpro/: __init__.py  _analyzers.py  _cleaners.py  _coords.py  _encoders.py  _modifiers.py  _numba.py  _ragged.py  _types.py  _utils.py  bed.py  gtf.py  rag.py
python/seqpro/alphabets/: __init__.py  _alphabets.py
python/seqpro/experimental/: _experimental.py  _visualizers.py
python/seqpro/rag/: __init__.py  _ak_interop.py  _array.py  _core.py  _gufuncs.py  _ingest.py  _layout.py  _ops.py  _types.py  _utils.py
python/seqpro/transforms/: __init__.py  augmentation.py  tmm.py
python/seqpro/xr/: __init__.py
seqpro/: __init__.py  _alphabets.py  _alphabets.pyi  _analyzers.py  _cleaners.py  _deprecated.py  _encoders.py  _experimental.py  _helpers.py  _modifiers.py  _modifiers.pyi  _numba.py  _utils.py  _visualizers.py
seqpro.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
seqpro/alphabets/: __init__.py  _alphabets.py
seqpro/deprecated/: _analyzers.py  _cleaners.py  _encoders.py  _modifiers.py  _utils.py
seqpro/experimental/: _experimental.py  _visualizers.py
seqpro/xr/: __init__.py
skills/seqpro/: SKILL.md
src/: hashing.rs  kmer_encode.rs  kshuffle.rs  kshuffle_ref.rs  lib.rs  ragged.rs  tokenize.rs  translate.rs  ushuffle.rs
tests/: _shape_fixtures.py  bench_ragged_getitem.py  bench_translate_lut.py  test_analyzers.py  test_bench_tokenize.py  test_concatenate.py  test_coords.py  test_core_ragged_surface.py  test_encoders.py  test_ingest.py  test_modifiers.py  test_ohe.py  test_rag_to_packed.py  test_ragged.py  test_ragged_core.py  test_ragged_core_records.py  test_ragged_hash.py  test_ragged_nested_consumers.py  test_ragged_nested_diff.py  test_ragged_rc.py  test_ragged_record_indexing.py  test_ragged_slice_fastpath.py  test_ragged_subclass.py  test_ragged_to_padded.py  test_shape_matrix.py  test_tokenize.py  test_tokenize_rust.py  test_transforms.py  test_translate.py  test_translate_lut_bench.py  test_translate_rust.py  test_utils.py  tests.py
tests/bed/: test_pyranges.py  test_read.py  test_sort.py  test_to_pyranges.py  test_with_length.py
