[package]
name = "seqpro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "seqpro"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.99"
derive_builder = "0.13.1"
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = "0.20.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.11.0"
thiserror = "1.0.69"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dependencies.pyo3]
version = "0.20"
features = ["abi3-py39"]
