[workspace]
members = ["crates/seqpro-core"]

[package]
name = "seqpro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "seqpro"
crate-type = ["cdylib", "rlib"]

[dependencies]
seqpro-core = { path = "crates/seqpro-core" }
anyhow = "1.0.99"
ndarray = { version = "0.17", features = ["rayon"] }
numpy = "0.28.0"
rand = { version = "0.8.5", features = ["small_rng"] }
digest = "0.10"
md-5 = "0.10"
rapidhash = "4"
rayon = "1.11.0"
sha2 = "0.10"
thiserror = "1.0.69"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dependencies.pyo3]
version = "0.28"
features = ["abi3-py39"]

[dev-dependencies]
criterion = { version = "4.7.0", package = "codspeed-criterion-compat" }
derive_builder = "0.13.1"
proptest = "1.4"

[[bench]]
name = "kshuffle"
harness = false
