[project]
name = "seqpro"
version = "0.13.0"
authors = [
    { name = "David Laub", email = "dlaub@ucsd.edu" },
    { name = "Adam Klie", email = "aklie@ucsd.edu" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.10"
dependencies = [
    "numba>=0.58.1",
    "numpy>=1.26.0",
    "polars>=1.21.0,<2",
    "pyranges>=0.1.3,<0.2",
    "pandera>=0.31.1",
    "pandas",
    "pyarrow",
    "natsort",
    "narwhals>=2.20.0",
    "setuptools>=70",                    # uv + pyranges seems to miss this
    "awkward>=2.5.0",
    "polars-config-meta[polars]>=0.3.2",
    "attrs",
]

[dependency-groups]
dev = [
    "biopython>=1.85",
    "hypothesis[numpy]>=6.131.2",
    "pytest>=8.3.5",
    "pytest-cases>=3.8.6",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.maturin.generate-ci.github]
platform = ["manylinux", "musllinux", "windows", "macos"]
pytest = true


[tool.basedpyright]
include = ['python/seqpro', 'tests']
enableTypeIgnoreComments = true
reportMissingTypeArgument = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
legacy_tag_formats = ["v$version"]
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
